<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectedRouteListingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/errorselected"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:text=""
        android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txtselectedstartaddess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="Start Address"/>

        <EditText
            android:id="@+id/txtnewstartaddess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/prompt_newstartaddress"/>

        <TextView
            android:id="@+id/txtselecteddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="Date"/>

        <EditText
            android:id="@+id/txtnewdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/prompt_newdate"/>
        <TextView
            android:id="@+id/txtselectedtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="Time"/>

        <EditText
            android:id="@+id/txtnewtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/prompt_newtime"/>
        <Button
            android:id="@+id/btnmodifyroute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_modifystart" />
        <Button
            android:id="@+id/btnbackresults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_backlistings" />

        <Button
            android:id="@+id/btndeleteroute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_deleteroute"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

</FrameLayout>